--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy":"http://localhost:5555",
   "eslintConfig": {
     "extends": [
       "react-app",
