commiting everything this time!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,32 +1,33 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#f6fdad",
-        "activityBar.background": "#f6fdad",
+        "activityBar.activeBackground": "#fcc1a4",
+        "activityBar.background": "#fcc1a4",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#05abbb",
+        "activityBarBadge.background": "#059a36",
         "activityBarBadge.foreground": "#e7e7e7",
         "commandCenter.border": "#15202b99",
-        "editorGroup.border": "#f6fdad",
-        "panel.border": "#f6fdad",
-        "sash.hoverBorder": "#f6fdad",
-        "sideBar.border": "#f6fdad",
-        "statusBar.background": "#f0fb7c",
-        "statusBar.border": "#f0fb7c",
-        "statusBar.debuggingBackground": "#877cfb",
-        "statusBar.debuggingBorder": "#877cfb",
+        "editorGroup.border": "#fcc1a4",
+        "panel.border": "#fcc1a4",
+        "sash.hoverBorder": "#fcc1a4",
+        "sideBar.border": "#fcc1a4",
+        "statusBar.background": "#fb9f72",
+        "statusBar.border": "#fb9f72",
+        "statusBar.debuggingBackground": "#72cefb",
+        "statusBar.debuggingBorder": "#72cefb",
         "statusBar.debuggingForeground": "#15202b",
         "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#eaf94a",
-        "statusBarItem.remoteBackground": "#f0fb7c",
+        "statusBarItem.hoverBackground": "#fa7d40",
+        "statusBarItem.remoteBackground": "#fb9f72",
         "statusBarItem.remoteForeground": "#15202b",
-        "tab.activeBorder": "#f6fdad",
-        "titleBar.activeBackground": "#f0fb7c",
+        "tab.activeBorder": "#fcc1a4",
+        "titleBar.activeBackground": "#fb9f72",
         "titleBar.activeForeground": "#15202b",
-        "titleBar.border": "#f0fb7c",
-        "titleBar.inactiveBackground": "#f0fb7c99",
+        "titleBar.border": "#fb9f72",
+        "titleBar.inactiveBackground": "#fb9f7299",
         "titleBar.inactiveForeground": "#15202b99"
     },
     "peacock.color": "#f0fb7c",
-    "darkSynthwave84.brightness": 1
+    "darkSynthwave84.brightness": 1,
+    "peacock.remoteColor": "#fb9f72"
 }
