--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,14 @@
 *.userosscache
 *.sln.docstates
 *.github
+*.vscode
+.env
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
 # Mono auto generated files
 mono_crash.*
+
 
 # Build results
 [Dd]ebug/
