--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.4.2",
     "js-cookie": "^3.0.5",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
     "react-router-dom": "^5.3.4",
