--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-markdown": "^6.0.2",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "react-virtualized": "^9.22.5",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2",
     "yup": "^1.2.0"
