commit before moving to aws integration again

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,6 @@
     },
     "peacock.color": "#f0fb7c",
     "darkSynthwave84.brightness": 1,
-    "peacock.remoteColor": "#fb9f72"
+    "peacock.remoteColor": "#fb9f72",
+    "synthwave84.brightness": 1
 }
